# MuseumProject

./: CMakeLists.txt  README.md  main.cpp
data/: Museum-UML.drawio  artworks.csv  userCollection.csv
include/: Artwork.h  Date.h  Dimensions.h  Name.h  Painting.h  Sculpture.h  Utility.h  WrittenWord.h
src/: Artwork.cpp  Date.cpp  Dimensions.cpp  Name.cpp  Painting.cpp  Sculpture.cpp  WrittenWord.cpp  main.cpp
